--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,27 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.carta {
+  height: 500px;
+  width: 300px;
+  margin: 1000px;
+  border-radius: 25px;
+}
+
+.pinta {
+  margin-left: 30px;
+}
+
+.numero {
+  margin-top: 10px;
+  margin-bottom: 100px;
+  margin-left: 100px;
+  vertical-align: middle;
+  border-color: black;
+  border-width: 50px;
+}
+
+.pinta2 {
+  transform: rotate(180deg);
+  padding-right: 100px;
+  padding-left: 30px;
+}
